--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,1 +1,52 @@
-name: docker CI/CD
+name: Docker CI/CD
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1. Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 3. Build Docker image with cache
+      - name: Build Docker image
+        run: |
+          docker build \
+            --file Dockerfile.dev \
+            --tag node-docker-dev \
+            --cache-from node-docker-dev \
+            .
+
+      # 4. Tag Docker image for Docker Hub
+      - name: Tag Docker image
+        run: |
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/node-docker-app
+          docker tag node-docker-dev $IMAGE_NAME:latest
+          # Optional: tag with branch name
+          if [ "${{ github.ref_name }}" != "main" ]; then
+            docker tag node-docker-dev $IMAGE_NAME:${{ github.ref_name }}
+          fi
+
+      # 5. Push Docker image to Docker Hub
+      - name: Push Docker image
+        run: |
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/node-docker-app
+          docker push $IMAGE_NAME:latest
+          # Optional: push branch tag
+          if [ "${{ github.ref_name }}" != "main" ]; then
+            docker push $IMAGE_NAME:${{ github.ref_name }}
+          fi
