--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -15,38 +15,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Log in to Docker Hub
+      # 2. Set up Docker Buildx (Required for advanced caching and modern builds)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # 3. Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 3. Build Docker image with cache
-      - name: Build Docker image
-        run: |
-          docker build \
-            --file Dockerfile.dev \
-            --tag node-docker-dev \
-            --cache-from node-docker-dev \
-            .
+      # 4. Generate Docker metadata (Handle tags for main vs branches automatically)
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/typescript-docker-app
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            type=ref,event=branch
 
-      # 4. Tag Docker image for Docker Hub
-      - name: Tag Docker image
-        run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/node-docker-app
-          docker tag node-docker-dev $IMAGE_NAME:latest
-          # Optional: tag with branch name
-          if [ "${{ github.ref_name }}" != "main" ]; then
-            docker tag node-docker-dev $IMAGE_NAME:${{ github.ref_name }}
-          fi
-
-      # 5. Push Docker image to Docker Hub
-      - name: Push Docker image
-        run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/node-docker-app
-          docker push $IMAGE_NAME:latest
-          # Optional: push branch tag
-          if [ "${{ github.ref_name }}" != "main" ]; then
-            docker push $IMAGE_NAME:${{ github.ref_name }}
-          fi
+      # 5. Build and Push
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          # This explicitly looks for the standard "Dockerfile"
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          # Use GitHub Actions caching (Much faster than the previous method)
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
