--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "typescript-docker-app",
+  "name": "typescript-app",
   "version": "1.0.0",
-  "description": "TypeScript app running in Docker",
+  "description": "TypeScript app",
   "main": "app/index.ts",
   "scripts": {
-    "start": "ts-node app/index.ts",
+    "start": "app/index.ts",
     "build": "tsc",
     "dev": "ts-node-dev --respawn app/index.ts"
   },
