--- a/app/package.json
+++ b/app/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "typescript-app",
+  "name": "dybdelaering5",
   "version": "1.0.0",
-  "description": "TypeScript app",
-  "main": "app/index.ts",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {},
   "scripts": {
-    "start": "app/index.ts",
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn app/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/emilian2008/Dybdelaering5.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/emilian2008/Dybdelaering5/issues"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.0.0",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
-  }
+  "homepage": "https://github.com/emilian2008/Dybdelaering5#readme"
 }
