Removed unnecessary puthon install in dockerfile and changed package.json back to working version.

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 
 WORKDIR /app
 COPY package*.json ./
-RUN apk add --no-cache python3 make g++ && npm install && apk del python3 make g++
+RUN npm install
 COPY . . 
 EXPOSE 8081
 CMD ["npm", "start"]
