--- a/app/package.json
+++ b/app/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "dybdelaering5",
+  "name": "typescript-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "typescript": "^5.9.3"
-  },
-  "devDependencies": {},
+  "description": "TypeScript app",
+  "main": "app/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/emilian2008/Dybdelaering5.git"
+    "start": "app/index.ts",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn app/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/emilian2008/Dybdelaering5/issues"
+  "dependencies": {
+    "express": "^4.18.2"
   },
-  "homepage": "https://github.com/emilian2008/Dybdelaering5#readme"
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.0.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
+  }
 }
