--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,13 +1,23 @@
+FROM node:18-bullseye-slim AS builder
+
+WORKDIR /app
+COPY package*.json ./
+# Install dev deps for building (typescript, etc.)
+RUN npm ci
+
+# Copy source and build
+COPY . .
+RUN npm run build
+
 FROM node:18-bullseye-slim
 
 WORKDIR /app
-# Only copy package manifests first for a reproducible layer
+# Install only production deps in the final image
 COPY package*.json ./
-# Install only production dependencies to avoid native-build issues from dev deps
-RUN npm install --omit=dev --no-audit --no-fund
+RUN npm ci --omit=dev --no-audit --no-fund
 
-# Copy application sources
-COPY . .
+# Copy built output from builder
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 8081
-CMD ["npm", "start"]
+CMD ["node", "dist/index.js"]
