--- a/app/dockerfile
+++ b/app/dockerfile
@@ -6,7 +6,7 @@ COPY package*.json ./
 COPY package-lock*.json ./
 
 # Install all dependencies including dev (needed for build)
-RUN npm install --no-audit --no-fund
+RUN npm install
 
 # Copy application sources and build config
 COPY tsconfig*.json ./
