--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         include:
           - name: app
-            context: .
+            context: ./app
             file: ./app/Dockerfile
             image: typescript-docker-app
           - name: n8n
