--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,17 @@
 services:
+  db:
+    image: mysql:8.0
+    container_name: mysql_db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
+      MYSQL_DATABASE: "${MYSQL_DATABASE}"
+      MYSQL_USER: "${MYSQL_USER}"
+      MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
   frontend:
     build: ./app
     ports:
@@ -18,3 +31,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  db_data:
